db update db password

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -15,7 +15,9 @@
   </header>
   <h1 class="text-c" style="padding: 130px 0 50px 0">Thank you !</h1>
   <div class="sign-in">
-    <div class="card text-center" style="background-color: #ebecf1"; >
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="card text-center" style="background-color: #ebecf1"; >
       
       <div class="card-body"  >
         <p>Your response has been recorded. Thank you for contacting us.</p>
@@ -26,6 +28,10 @@
       </div>
     </div>
   </div>
+        
+      </div>
+    </div>
+    
   
 </body>
 </html>
