modified contact and forms

--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -19,10 +19,8 @@
     </header>
   <h1 class="text-c" style="padding: 130px 0 50px 0">Contact Forms</h1>
 
-  <div class="container" >
-    <div class="row">
-      <div class="col-sm-1">
-        <table width="1110px" border="1px" align="center" >
+  <div >
+    <table width="1110px" border="1px" align="center" >
         <th class="bg-primary th-c"> Date</th>
         <th class="bg-primary th-c"> First Name</th>
         <th class="bg-primary th-c">Last Name</th>
@@ -77,10 +75,6 @@
           
           
             
-        
-      </div>
-    </div>
-    
 
         
         
